# cpp-edu

./: README.md  plans.md
books/STL17-Галовиц/: Возможности C++17.md
books/Задачи-Саттер/: Task1.md  Task2.md  Task3.md  Task4.md  Task5.md  Task6.md  Task7.md
books/Программирование-Страуструп/: Глава5.Ошибки  Ошибки.md
books/Программирование-Страуструп/Chapter6/: calc2.cpp  Написание программ.md
code/errors/: seg_fault.cpp
code/inheritance/: i1.cpp
code/patterns/singleton/: signgleton-stepik.cpp
code/unit_testing/: test_runner.cpp  test_runner.h
days/: day1  day2  day3  day4
notes/: AutoDecltype.md  Casts.md  Compilation.md  Extern.md  Friend.md  Inline.md  Mutable.md  ODR.md  Placement new.md  Static.md  UpperLowerBound.md  Using.md  lvalue&rvalue.md  Аргументы функций  Аргументы функций.md  Архитектура машины.md  Вектор  Виртуальные функции и наследование.md  Выделение памяти в стиле С  Выделение памяти в стиле С.md  Выполнение программ.md  Итераторы  Итераторы.md  Конструктор копирования.md  Кортеж.md  Кратко о сборке программ  Кратко о сборке программ.md  Множество.md  Недостатки указателей  Обьектный файл  Обьектный файл.md  Пара.md  Параметры g++  Параметры g++.md  Правила перегрузки  Правила перегрузки.md  Проблемы выделения памяти.md  Различие ссылок и указателей.md  Сегментация памяти  Ссылки и const  (+3 more)
projects/Calculator/: CMakeLists.txt  README.md  calculator.cpp  calculator.h  main.cpp  numbers.cpp  numbers.h
projects/Calculator/test/: CalculatorTest.cpp  test_runner.cpp  test_runner.h
projects/TypeInfo/: README.md  typeinfo.cpp
(+8 files in other folders)
